--- a/src/sass/60_components/_components.forms.scss
+++ b/src/sass/60_components/_components.forms.scss
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: row;
     gap: 2rem;
-    @include media-breakpoint-down(sm) {
+    @include media-breakpoint-down(md) {
       gap: 1.5rem;
       flex-direction: column;
       padding: 0;
